tests/baselines/reference/ES5For-of17(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5For-of17.ts(3,14): error TS7022: 'v' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
ES5For-of17.ts(3,20): error TS2448: Block-scoped variable 'v' used before its declaration.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5For-of17.ts (2 errors) ====
    for (let v of []) {
        v;
        for (let v of [v]) {
                 ~
!!! error TS7022: 'v' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                       ~
!!! error TS2448: Block-scoped variable 'v' used before its declaration.
!!! related TS2728 ES5For-of17.ts:3:14: 'v' is declared here.
            var x = v;
            v++;
        }
    }